--- a/frontend/src/Components/Notas/styles-priority.css
+++ b/frontend/src/Components/Notas/styles-priority.css
@@ -1,55 +1,55 @@
-li.notepad-infos div {
+li.notepad-infos-priority div {
     display: flex;
     justify-content: space-between;
 }
 
-li.notepad-infos {
-    background: #fff;
+li.notepad-infos-priority {
+    background: #f5765d;
     box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     padding: 20px 20px 10px 20px;
 }
 
-li.notepad-infos strong {
+li.notepad-infos-priority strong {
     display: block;
     font-size: 16px;
-    color: #333;
+    color: #fff;
 }
 
-li.notepad-infos div div {
-    color: #ffeae6;
+li.notepad-infos-priority div div {
+    color: #fabbad;
     cursor: pointer;
 }
 
-li.notepad-infos div div:hover {
-    color: #f5765d;
+li.notepad-infos-priority div div:hover {
+    color: #fff;
     transition: 0.5s;
 }
 
-li.notepad-infos textarea {
+li.notepad-infos-priority textarea {
     padding: 7px;
     margin-top: 7px;
     margin-bottom: 5px;
     width: 100%;
     height: 130px;
     font-size: 14px;
-    color: #666;
+    color: #fff;
     border: 0;
-    background: #fff;
+    background: #f5765d;
     resize: none;
 }
 
-li.notepad-infos textarea:hover {
+li.notepad-infos-priority textarea:hover {
     cursor: default;
 }
 
 
-li.notepad-infos span {
+li.notepad-infos-priority span {
     color: #c4c4c4;
     cursor: pointer;
 }
 
-li.notepad-infos span:hover{
-    color: #f5765d;
+li.notepad-infos-priority span:hover{
+    color: #FFF;
     transition: 0.2s;
 }
